# smartbench

smartbench-backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
smartbench-backend/.github/workflows/: ci.yml
smartbench-backend/app/: __init__.py  config.py  extensions.py
smartbench-backend/app/agents/: orchestrator.py
smartbench-backend/app/files/: storage.py
smartbench-backend/app/models/: __init__.py  agents.py  audit.py  base.py  files.py  identity.py  notebooks.py  projects.py  registry.py  results.py  types.py  workflows.py
smartbench-backend/app/schemas/: agents.py  common.py  identity.py  notebooks.py  projects.py  registry.py  results.py  workflows.py
smartbench-backend/app/security/: decorators.py  rbac.py
smartbench-backend/app/semantic/: serializer.py
smartbench-backend/app/services/: agent_analytics_service.py  agent_service.py  agent_session_service.py  audit_service.py  exceptions.py  introspection_service.py  notebook_service.py  openai_service.py  project_service.py  registry_service.py  result_service.py  workflow_service.py  workspace_service.py
smartbench-backend/migrations/: env.py
smartbench-backend/scripts/: __init__.py  db_seed.sh  db_upgrade.sh  reset_local_stack.sh  seed_demo.py  smoke_api.sh  verify_env.sh  wait_for_db.py
smartbench-backend/tests/: conftest.py  test_agent_service_read_only.py  test_agent_session_service.py  test_audit_service.py  test_registry_service.py  test_result_service.py  test_workflow_service.py
(+61 files in other folders)
